--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,14 @@
     <title>Mike Bolloskis</title>
   </head>
   <body>
+
+    <!-- Nelify form handling -->
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <textarea name="message"></textarea>
+    </form>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
